--- a/external/mlsql-mysql-store/pom.xml
+++ b/external/mlsql-mysql-store/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
         <version>1.6.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
