--- a/streamingpro-spark-2.3.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.3.0-adaptor/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>streamingpro-spark-2.3.0-adaptor_${scala.binary.version}</artifactId>
     <dependencies>
+
+        <dependency>
+            <groupId>tech.mlsql</groupId>
+            <artifactId>spark-adhoc-kafka_${scala.binary.version}</artifactId>
+            <version>${spark-adhoc-kafka.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-spark-common-2.3_${scala.binary.version}</artifactId>
