--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,7 @@
                 <module>external/python-controller</module>
                 <module>external/mlsql-watcher</module>
                 <module>external/mlsql-mysql-store</module>
+                <module>external/mlsql-sql-profiler</module>
             </modules>
             <dependencies>
                 <dependency>
