--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -71,22 +71,22 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.16</version>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.2</version>
+            <version>${jsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>us.codecraft</groupId>
             <artifactId>xsoup</artifactId>
-            <version>0.3.1</version>
+            <version>${xsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.edu.hfut.dmic.webcollector</groupId>
             <artifactId>WebCollector</artifactId>
-            <version>2.71</version>
+            <version>${WebCollector.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>simple-schema_${scala.binary.version}</artifactId>
-            <version>0.2.0</version>
+            <version>${simpleschema.version}</version>
         </dependency>
         <dependency>
             <groupId>tech.mlsql</groupId>
@@ -144,7 +144,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
     </dependencies>
 
 </project>
