--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -39,18 +39,24 @@
                                 <goals>
                                     <goal>shade</goal>
                                 </goals>
-<!--                                <configuration>-->
-<!--                                    <artifactSet>-->
-<!--                                        <excludes>-->
-<!--                                            <exclude>org.apache.spark:spark-hive-thriftserver_2.11</exclude>-->
-<!--                                            <exclude>org.spark-project.hive:hive-cli:jar:1.2.1.spark2</exclude>-->
-<!--                                            <exclude>org.spark-project.hive:hive-jdbc</exclude>-->
-<!--                                            <exclude>org.spark-project.hive:hive-beeline</exclude>-->
-<!--                                            <exclude>org.scala-lang:scala-compiler</exclude>-->
-<!--                                            <exclude>org.antlr:antlr4</exclude>-->
-<!--                                        </excludes>-->
-<!--                                    </artifactSet>-->
-<!--                                </configuration>-->
+                                <configuration>
+                                    <artifactSet>
+                                        <excludes>
+                                            <exclude>org.scala-lang:scala-compiler</exclude>
+                                            <exclude>org.antlr:antlr4</exclude>
+                                            <exclude>org.antlr:stringtemplate</exclude>
+                                            <exclude>org.antlr:ST4</exclude>
+                                            <exclude>org.antlr:antlr4-runtime</exclude>
+                                            <exclude>org.fusesource.leveldbjni:leveldbjni-all</exclude>
+                                            <exclude>org.scala-lang:scala-reflect</exclude>
+                                            <exclude>org.scala-lang.modules:scala-xml_${scala.binary.version}</exclude>
+                                            <exclude>org.scala-lang.modules:scala-parser-combinators_${scala.binary.version}</exclude>
+                                            <exclude>org.apache.spark:spark-tags_${scala.binary.version}</exclude>
+                                            <exclude>org.spark-project.spark:unused</exclude>
+                                            <exclude>org.scala-lang:jline</exclude>
+                                        </excludes>
+                                    </artifactSet>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -383,6 +389,26 @@
 
             </dependencies>
         </profile>
+
+        <profile>
+            <id>jython-support</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.python</groupId>
+                    <artifactId>jython-standalone</artifactId>
+                    <version>${jython.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>chinese-analyzer-support</id>
+            <dependencies>
+                
+            </dependencies>
+        </profile>
+
+
         <profile>
             <id>online</id>
             <properties>
@@ -453,29 +479,29 @@
             <version>0.3.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>cn.edu.hfut.dmic.webcollector</groupId>
-            <artifactId>WebCollector</artifactId>
-            <version>2.71</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-jdbc</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.mchange</groupId>
-                    <artifactId>c3p0</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.avro</groupId>
-                    <artifactId>avro</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>cn.edu.hfut.dmic.webcollector</groupId>-->
+        <!--            <artifactId>WebCollector</artifactId>-->
+        <!--            <version>${WebCollector.version}</version>-->
+        <!--            <exclusions>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>junit</groupId>-->
+        <!--                    <artifactId>junit</artifactId>-->
+        <!--                </exclusion>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>org.springframework</groupId>-->
+        <!--                    <artifactId>spring-jdbc</artifactId>-->
+        <!--                </exclusion>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>com.mchange</groupId>-->
+        <!--                    <artifactId>c3p0</artifactId>-->
+        <!--                </exclusion>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>org.apache.avro</groupId>-->
+        <!--                    <artifactId>avro</artifactId>-->
+        <!--                </exclusion>-->
+        <!--            </exclusions>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>tech.mlsql</groupId>
