--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.6.5</version>
+            <version>${hadoop-client-version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
