--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <hadoop-client-version>2.6.5</hadoop-client-version>
 
         <common-utils-version>0.2.9</common-utils-version>
-        <serviceframework.version>2.0.5</serviceframework.version>
+        <serviceframework.version>2.0.6</serviceframework.version>
         <pyjava-version>0.2.8.0</pyjava-version>
 
         <delta-plus-version>0.2.0</delta-plus-version>
@@ -424,6 +424,93 @@
             </properties>
             <modules>
                 <module>streamingpro-spark-2.4.0-adaptor</module>
+                <module>streamingpro-dsl</module>
+                <module>streamingpro-mlsql</module>
+                <module>external/python-controller</module>
+                <module>external/mlsql-watcher</module>
+                <module>external/mlsql-mysql-store</module>
+                <module>external/mlsql-sql-profiler</module>
+            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>javax.servlet-api</artifactId>
+                    <version>3.1.0</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>net.csdn</groupId>
+                    <artifactId>serviceframework-jetty-9-server_${scala.binary.version}</artifactId>
+                    <version>${serviceframework.version}</version>
+                    <exclusions>
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-server</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-http</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-io</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-continuation</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-util</artifactId>-->
+                        <!--</exclusion>-->
+                        <exclusion>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-servlet</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.scala-lang</groupId>
+                            <artifactId>jline</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.alibaba</groupId>
+                            <artifactId>dubbo</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>delta-plus_${scala.binary.version}</artifactId>
+                    <version>${delta-plus-version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>tech.mlsql</groupId>
+                            <artifactId>streamingpro-common</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>tech.mlsql</groupId>
+                            <artifactId>common-utils_${scala.binary.version}</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+            </dependencies>
+        </profile>
+
+
+        <profile>
+            <id>spark-3.0</id>
+            <properties>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
+                </spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
+                <spark.version>3.0.0-preview2</spark.version>
+                <spark.bigversion>3.0</spark.bigversion>
+            </properties>
+            <modules>
+                <module>streamingpro-spark-3.0.0-adaptor</module>
                 <module>streamingpro-dsl</module>
                 <module>streamingpro-mlsql</module>
                 <module>external/python-controller</module>
