--- a/streamingpro-mlsql/src/main/resources-online/log4j.properties
+++ b/streamingpro-mlsql/src/main/resources-online/log4j.properties
@@ -20,7 +20,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
-log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=./logs/mlsql_engine.log
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.file.rollingPolicy.fileNamePattern=./logs/mlsql_engine.%d.gz
