--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -117,6 +117,10 @@
                     <groupId>tech.mlsql</groupId>
                     <artifactId>common-utils_${scala.binary.version}</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_2.11</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -132,6 +136,10 @@
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
                     <artifactId>common-utils_${scala.binary.version}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_2.11</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
