--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
+
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -57,16 +57,14 @@
         <spark.version>2.4.3</spark.version>
         <spark.bigversion>2.4</spark.bigversion>
 
-<!--        <scala.version>2.12.10</scala.version>-->
-<!--        <scala.binary.version>2.12</scala.binary.version>-->
-<!--        <spark.version>3.0.0-preview2</spark.version>-->
-<!--        <spark.bigversion>3.0</spark.bigversion>-->
-        
+        <!--        <scala.version>2.12.10</scala.version>-->
+        <!--        <scala.binary.version>2.12</scala.binary.version>-->
+        <!--        <spark.version>3.0.0-preview2</spark.version>-->
+        <!--        <spark.bigversion>3.0</spark.bigversion>-->
+
         <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
         </spark.streaming.kafka.artifactId>
         <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
-
-
 
 
         <flink.version>1.4.2</flink.version>
@@ -84,6 +82,18 @@
         <jython.version>2.7.1</jython.version>
         <jtar.version>2.2</jtar.version>
         <zkclient.version>0.5</zkclient.version>
+
+        <mysql-connector.version>5.1.22</mysql-connector.version>
+        <commons-exec.version>1.3</commons-exec.version>
+        <joda-time.version>2.9.3</joda-time.version>
+        <joda-convert.version>1.8.1</joda-convert.version>
+        <pegdown.version>1.6.0</pegdown.version>
+        <json-path.version>2.2.0</json-path.version>
+
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.1.8</logback.version>
+
+        <scalatest.version>3.0.3</scalatest.version>
 
         <scope>provided</scope>
         <hadoop-client-version>2.6.5</hadoop-client-version>
@@ -114,7 +124,7 @@
     <!--    </repositories>-->
 
     <profiles>
-        
+
         <profile>
             <id>release-sign-artifacts</id>
             <activation>
@@ -528,7 +538,7 @@
         </profile>
     </profiles>
     <dependencies>
-        
+
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
@@ -546,7 +556,7 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <version>3.0.3</version>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -575,18 +585,18 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-exec</artifactId>
-            <version>1.3</version>
+            <version>${commons-exec.version}</version>
         </dependency>
 
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.9.3</version>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>org.joda</groupId>
             <artifactId>joda-convert</artifactId>
-            <version>1.8.1</version>
+            <version>${joda-convert.version}</version>
         </dependency>
 
         <dependency>
@@ -646,7 +656,7 @@
         <dependency>
             <groupId>org.pegdown</groupId>
             <artifactId>pegdown</artifactId>
-            <version>1.6.0</version>
+            <version>${pegdown.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -732,7 +742,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.2.0</version>
+            <version>${json-path.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -765,30 +775,30 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.22</version>
+            <version>${mysql-connector.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.5</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.5</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.8</version>
+            <version>${logback.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.1.8</version>
+            <version>${logback.version}</version>
         </dependency>
 
     </dependencies>
