--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,7 @@
                 <module>external/mlsql-watcher</module>
                 <module>external/mlsql-mysql-store</module>
                 <module>external/mlsql-sql-profiler</module>
+                <module>external/mlsql-autosuggest</module>
             </modules>
             <dependencies>
                 <dependency>
