add suggester for 3.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,7 @@
                 <module>external/mlsql-watcher</module>
                 <module>external/mlsql-mysql-store</module>
                 <module>external/mlsql-sql-profiler</module>
+                <module>external/mlsql-autosuggest</module>
             </modules>
             <dependencies>
                 <dependency>
