--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 
         <!--        <scala.version>2.12.10</scala.version>-->
         <!--        <scala.binary.version>2.12</scala.binary.version>-->
-        <!--        <spark.version>3.0.0-preview2</spark.version>-->
+        <!--        <spark.version>3.0.0</spark.version>-->
         <!--        <spark.bigversion>3.0</spark.bigversion>-->
 
         <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
