--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>streamingpro-spark-common</module>
         <module>streamingpro-core</module>
         <module>streamingpro-cluster</module>
+        <module>external/mlsql-ets</module>
     </modules>
 
     <properties>
