--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -272,6 +272,12 @@
                     <version>${project.parent.version}</version>
                 </dependency>
 
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-ets-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
 
                 <dependency>
                     <groupId>tech.mlsql</groupId>
