--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -117,6 +117,10 @@
                     <groupId>tech.mlsql</groupId>
                     <artifactId>common-utils_${scala.binary.version}</artifactId>
                 </exclusion>
+<!--                <exclusion>-->
+<!--                    <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--                    <artifactId>jackson-core</artifactId>-->
+<!--                </exclusion>-->
             </exclusions>
         </dependency>
         <dependency>
