--- a/pom.xml
+++ b/pom.xml
@@ -653,12 +653,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+                                              s
         <dependency>
             <groupId>net.csdn</groupId>
             <artifactId>serviceframework-dispatcher_${scala.binary.version}</artifactId>
             <version>${serviceframework.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_${scala.binary.version}</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
                     <artifactId>jline</artifactId>
@@ -704,6 +708,10 @@
             <artifactId>serviceframework-web_${scala.binary.version}</artifactId>
             <version>${serviceframework.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_${scala.binary.version}</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
                     <artifactId>jline</artifactId>
