--- a/external/mlsql-mysql-store/pom.xml
+++ b/external/mlsql-mysql-store/pom.xml
@@ -73,7 +73,11 @@
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>common-utils_${scala.binary.version}</artifactId>
+                    <artifactId>common-utils_2.11</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_2.12</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
