--- a/pom.xml
+++ b/pom.xml
@@ -661,7 +661,11 @@
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>common-utils_${scala.binary.version}</artifactId>
+                    <artifactId>common-utils_2.11</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_2.12</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
@@ -710,7 +714,11 @@
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>common-utils_${scala.binary.version}</artifactId>
+                    <artifactId>common-utils_2.11</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>common-utils_2.12</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
