--- a/pom.xml
+++ b/pom.xml
@@ -652,8 +652,7 @@
                     <artifactId>scala-compiler</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-                                              s
+        </dependency>         
         <dependency>
             <groupId>net.csdn</groupId>
             <artifactId>serviceframework-dispatcher_${scala.binary.version}</artifactId>
@@ -661,11 +660,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>common-utils_2.11</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>tech.mlsql</groupId>
-                    <artifactId>common-utils_2.12</artifactId>
+                    <artifactId>common-utils_${scala.binary.version}</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
