--- a/streamingpro-cluster/pom.xml
+++ b/streamingpro-cluster/pom.xml
@@ -142,7 +142,7 @@
 
         <dependency>
             <groupId>org.json4s</groupId>
-            <artifactId>json4s-jackson_2.11</artifactId>
+            <artifactId>json4s-jackson_${scala.binary.version}</artifactId>
             <version>3.6.1</version>
         </dependency>
     </dependencies>
