add aliyun-oss support

--- a/pom.xml
+++ b/pom.xml
@@ -130,10 +130,18 @@
 
     <profiles>
         <profile>
-            <id>hadoop-3.0</id>
+            <id>aliyun-oss</id>
             <properties>
                 <hadoop-client-version>3.2.0</hadoop-client-version>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-aliyun</artifactId>
+                    <version>3.2.0</version>
+                </dependency>
+
+            </dependencies>
         </profile>
 
         <profile>
