--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -306,6 +306,11 @@
                     <version>${project.parent.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-healthy-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.apache.spark</groupId>
                     <artifactId>spark-streaming-kafka-0-8_${scala.binary.version}</artifactId>
                     <version>${spark.version}</version>
