--- a/external/mlsql-autosuggest/pom.xml
+++ b/external/mlsql-autosuggest/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
