--- a/streamingpro-spark-common/pom.xml
+++ b/streamingpro-spark-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>streamingpro-spark-common-${spark.bigversion}_${scala.binary.version}</artifactId>
