--- a/external/mlsql-lang/pom.xml
+++ b/external/mlsql-lang/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mlsql-lang</artifactId>
+    <artifactId>mlsql-lang-${spark.bigversion}_${scala.binary.version}</artifactId>
 
     <dependencies>
         <dependency>
