--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -139,6 +139,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>tech.mlsql</groupId>
+            <artifactId>mlsql-lang-${spark.bigversion}_${scala.binary.version}</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
        
     </dependencies>
 
