--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,7 @@ streamingpro-api/spark-warehouse
 streamingpro-jython/logs/
 streamingpro-jython/metastore_db
 __mlsql__/
+
+# C++
+cmake-build-debug/
+
