--- a/.gitignore
+++ b/.gitignore
@@ -171,4 +171,5 @@ streamingpro-mlsql/spark-warehouse
 
 external/mlsql-native-operators/cmake-build-debug-ubuntu/
 external/mlsql-native-operators/.clion.source.upload.marker
+external/mlsql-native-operators/build/
 
