--- a/external/mlsql-sql-profiler/pom.xml
+++ b/external/mlsql-sql-profiler/pom.xml
@@ -77,6 +77,13 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency> <!-- Spark dependency -->
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
