--- a/external/mlsql-sql-profiler/pom.xml
+++ b/external/mlsql-sql-profiler/pom.xml
@@ -84,6 +84,11 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.swoop</groupId>
+            <artifactId>spark-alchemy_${scala.binary.version}</artifactId>
+            <version>0.3.28</version>
+        </dependency>
     </dependencies>
 
 </project>
