--- a/external/mlsql-sql-profiler/pom.xml
+++ b/external/mlsql-sql-profiler/pom.xml
@@ -10,6 +10,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <repositories>
+        <repository>
+            <id>swoop-inc</id>
+            <url>https://dl.bintray.com/swoop-inc/maven/</url>
+        </repository>
+    </repositories>
+
     <artifactId>mlsql-sql-profiler-${spark.bigversion}_${scala.binary.version}</artifactId>
     <dependencies>
         <dependency>
